test/spec_vectors/simd_bit_shift/fail/module_37.wat
(module (func $i32x4.shr_s-arg-empty (result v128) (i32x4.shr_s)))